--- a/app/src/main/res/layout/headlayout.xml
+++ b/app/src/main/res/layout/headlayout.xml
@@ -4,15 +4,17 @@
     android:layout_height="50dp"
     android:orientation="horizontal"
     android:background="#21292c" >
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/weixin"
-        android:textColor="#ffffff"
-        android:textSize="20sp"
         android:layout_gravity="center"
-        android:padding="10dp"/>
+        android:padding="10dp"
+        android:text="Task"
+        android:textColor="#ffffff"
+        android:textSize="20sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,19 +24,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:src="@drawable/fdj"
-            android:layout_marginRight="10dp"/>
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="40dp"
-            android:layout_height="30dp"
-            android:src="@drawable/barbuttonicon_add" />
 
     </LinearLayout>
 
