--- a/app/src/main/res/layout/listviewitems.xml
+++ b/app/src/main/res/layout/listviewitems.xml
@@ -4,45 +4,92 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:src="@drawable/tabbar_mainframe" />
 
     <LinearLayout
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:orientation="vertical"
+        android:layout_width="128dp"
+        android:layout_height="62dp"
         android:layout_margin="5dp"
-        >
-        <TextView
-
-            android:id="@+id/tv_userName"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            />
+        android:layout_weight="1"
+        android:gravity="center|center_vertical"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_lastMessage"
-            android:layout_width="match_parent"
-            android:layout_height="15dp"
-            />
+            android:id="@+id/taskName"
+            android:layout_width="87dp"
+            android:layout_height="wrap_content"
+            android:text="学习" />
+
+        <TextView
+            android:id="@+id/accumulateTime"
+            android:layout_width="87dp"
+            android:layout_height="18dp"
+            android:text="00:00:00" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_datetime"
-        android:layout_width="150dp"
-        android:layout_height="15dp"
-        />
-    <TextView
-        android:id="@+id/img"
-        android:layout_width="25dp"
-        android:gravity="center"
-        android:layout_height="25dp"
-        android:background="@drawable/tubiao"
-        />
+
+
+    <LinearLayout
+        android:layout_width="178dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <TextView
+
+            android:id="@+id/taskFinishNum"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="完成数量：1" />
+
+        <TextView
+            android:id="@+id/taskRunTime"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="当前: 00:00:00  92%" />
+
+        <TextView
+            android:id="@+id/taskDuration"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:text="总计: 00:00:00" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="110dp"
+        android:layout_height="65dp"
+        android:layout_margin="1dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/finishButton"
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_weight="1"
+            android:text="结束"
+            android:textSize="11dp"
+            android:layout_margin="0dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+        <Button
+            android:id="@+id/cancelButton"
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_weight="1"
+            android:text="取消"
+            android:textSize="12dp"
+            android:layout_margin="0dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="76dp"
+        android:layout_height="70dp"
+        android:layout_weight="1"
+        android:text="开始" />
+
 </LinearLayout>
