--- a/app/src/main/res/layout/listviewitems.xml
+++ b/app/src/main/res/layout/listviewitems.xml
@@ -6,7 +6,7 @@
 
 
     <LinearLayout
-        android:layout_width="128dp"
+        android:layout_width="78dp"
         android:layout_height="62dp"
         android:layout_margin="5dp"
         android:layout_weight="1"
@@ -17,12 +17,14 @@
             android:id="@+id/taskName"
             android:layout_width="87dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="学习" />
 
         <TextView
             android:id="@+id/accumulateTime"
             android:layout_width="87dp"
             android:layout_height="18dp"
+            android:gravity="center"
             android:text="00:00:00" />
 
     </LinearLayout>
@@ -66,28 +68,28 @@
         <Button
             android:id="@+id/finishButton"
             android:layout_width="match_parent"
-            android:layout_height="23dp"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
             android:layout_weight="1"
             android:text="结束"
-            android:textSize="11dp"
-            android:layout_margin="0dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="11sp" />
 
         <Button
             android:id="@+id/cancelButton"
             android:layout_width="match_parent"
-            android:layout_height="23dp"
+            android:layout_height="match_parent"
+            android:layout_margin="0dp"
             android:layout_weight="1"
             android:text="取消"
-            android:textSize="12dp"
-            android:layout_margin="0dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="11sp" />
 
     </LinearLayout>
 
     <Button
         android:id="@+id/startButton"
-        android:layout_width="76dp"
+        android:layout_width="60dp"
         android:layout_height="70dp"
         android:layout_weight="1"
         android:text="开始" />
