--- a/app/src/main/res/layout/footlayout.xml
+++ b/app/src/main/res/layout/footlayout.xml
@@ -13,52 +13,84 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="190dp"
+            android:layout_width="168dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="190dp"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/CurrentUsedTimeTittle"
+                    android:layout_width="51dp"
+                    android:layout_height="wrap_content"
+                    android:text="now: " />
+
+                <TextView
+                    android:id="@+id/CurrentUsedTime"
+                    android:layout_width="98dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="00:00:00" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/AllUsedTimeTittle"
+                    android:layout_width="51dp"
+                    android:layout_height="wrap_content"
+                    android:text="sum: " />
+
+                <TextView
+                    android:id="@+id/AllUsedTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="00:00:00" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/FreeTimeTittle"
-                    android:layout_width="74dp"
+                    android:layout_width="51dp"
                     android:layout_height="wrap_content"
-                    android:text="FreeTime" />
+                    android:text="rest: " />
 
                 <TextView
                     android:id="@+id/FreeTimeTv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="00:00:00 s" />
-
+                    android:gravity="center"
+                    android:text="00:00:00" />
             </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="71dp"
+            android:layout_width="243dp"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/CenBtn"
-            android:layout_width="66dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="cen" />
-
-        <Button
-            android:id="@+id/WonderBtn"
-            android:layout_width="71dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="xxx" />
     </RadioGroup>
 </LinearLayout>
