--- a/app/src/main/res/layout/headlayout.xml
+++ b/app/src/main/res/layout/headlayout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:orientation="horizontal"
-    android:background="#21292c" >
+    android:layout_height="30dp"
+    android:background="#21292c"
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/textView1"
@@ -11,14 +11,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:text="Task"
         android:textColor="#ffffff"
         android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="wrap_content"
